2010-07-10 CHEN Yangyang <skabyy@gmail.com>

    * Finish a simple version of AilurusServer and upload it to google appengine
    * Add support/clientlib.py to communicate with AilurusServer
    * Add interfaces to upload skills and suggestions.
    
2010-06-29 Ray Chen <chenrano2002@gmail.com>

    * Fix Issue 729: load panel failed when there is no selinx on Fedora

2010-06-29 Homer Xing <homer.xing@gmail.com>

    * Display lock path if failed to lock.
    * Create lock directory if necessary.
    * Fix bug: No option 'login_window_background'
    * Do not install Realplayer. It cannot be removed by yum.
    * Fedora server response time may exceed 10 seconds. 

2010-06-27 Homer Xing <homer.xing@gmail.com>

    * Try to lock apt cache before install software

2010-06-23 Homer Xing <homer.xing@gmail.com>

    * Display size of swap partitions
    * Example proxy string is selectable
    * Hide bios & motherboard item if value is empty
    * Return to original software list immediately after successfully install software

2010-06-19 Homer Xing <homer.xing@gmail.com>

    * Improve clean up pane. Reduce space cost.
    * If the server has not been detected, then show nothing.
    * Fix problems when disable getty.

2010-06-19 MA Yue <velly.empire@gmail.com>

    * Add a lot of applications icons

2010-06-18 Homer Xing <homer.xing@gmail.com>

    * Add youtube-dl, download youtube video software, in "Applications->File sharing" category
    * Add unetbootin, create bootable USB flash disk, in "Applications->Other" category
    * Add remastersys, backup your system to live cd, in "Applications->Other" category
    * Improve local deb installation
    * Do not list repositories when list all software items.
    * Recover 49-sansserif.conf
    * Improve software installation speed
    * Display detailed information if software is from Launchpad or external repository

2010-06-17 Homer Xing <homer.xing@gmail.com>

    * Change login window background.
